--- a/notebooks/case_fraud.ipynb
+++ b/notebooks/case_fraud.ipynb
@@ -1204,7 +1204,7 @@
     "    \"Teste\": avaliar_completo(modelo, X_test, y_test),\n",
     "}).T\n",
     "\n",
-    "print(\"\\n🔎 Métricas do Modelo:\")\n",
+    "print(\"\\n Métricas do Modelo:\")\n",
     "display(df_metricas)\n",
     "\n",
     "# Matriz\n",
